--- a/index.html
+++ b/index.html
@@ -16,19 +16,27 @@
     <!-- Game Controls -->
     <div id="gameControls" class="space-y-4">
       <!-- Start Game Button -->
-      <button id="startGame" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 w-full">
-        Start Game
+      <button id="nextWord" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 w-full">
+        Next Word
       </button>
 
-      <!-- Word Display (Initially Hidden) -->
-      <div id="wordDisplay" class="hidden mt-4">
-        <h2 id="word" class="text-2xl font-medium">Your word goes here</h2>
+      <!-- Word Display 1 (Initially Hidden) -->
+      <div id="wordDisplay1" class="hidden mt-4">
+        <h2 id="word1" class="text-2xl font-medium">Your word goes here</h2>
+      </div>
+      <div id="wordDisplay3" class="hidden mt-4">
+        <h2 id="word3" class="text-2xl font-medium">Your word goes here</h2>
       </div>
 
       <!-- Score Display -->
       <div id="scoreDisplay" class="mt-4 text-lg">
-        <span id="score" class="font-semibold">Score: 0</span>
+        <span id="score" class="font-semibold">Words Seen: 0</span>
       </div>
+
+      <!-- Reset Score Button -->
+      <button id="nextWord" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 w-full">
+        Reset Score
+      </button>
     </div>
   </div>
 
