--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       </div>
 
       <!-- Reset Score Button -->
-      <button id="nextWord" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 w-full">
-        Reset Score
+      <button id="resetScore" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 w-full">
+        Reset
       </button>
     </div>
   </div>
