--- a/index.html
+++ b/index.html
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Poetry for Neanderthals</title>
-  <!-- Link to the compiled Tailwind CSS file -->
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Game Interface</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-  <div id="app" class="w-full max-w-md mx-auto p-4 text-center bg-white rounded-lg shadow-md">
-    <!-- Game Title -->
-    <h1 class="text-3xl font-bold mb-6">Poetry for Neanderthals</h1>
+<body class="flex items-center justify-center h-screen bg-gray-50">
 
-    <!-- Game Controls -->
-    <div id="gameControls" class="space-y-4">
-      <!-- Start Game Button -->
-      <button id="nextWord" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 w-full">
-        Next Word
-      </button>
+    <div class="border border-gray-200 rounded-lg shadow-lg w-96 bg-white">
+        <!-- Top section -->
+        <div class="grid grid-cols-3 border-b border-gray-200 p-4">
+            <div class="flex flex-col">
+                <!-- todo team names here -->
+                <span id="reset-score" class="text-gray-500 font-semibold">Reset Score</span>
+                <span id="score" class="text-lg font-bold text-gray-800">Score: 0</span>
+            </div>
+            <div class="flex flex-col items-center">
+                <span id="word1" class="text-lg font-bold text-gray-800">Word1</span>
+                <span id="word3" class="text-lg font-bold text-gray-800">Word2</span>
+            </div>
+            <div class="flex justify-end">
+                <span class="text-gray-500 font-semibold">Timer (todo)</span>
+            </div>
+        </div>
 
-      <!-- Word Display 1 (Initially Hidden) -->
-      <div id="wordDisplay1" class="hidden mt-4">
-        <h2 id="word1" class="text-2xl font-medium">Your word goes here</h2>
-      </div>
-      <div id="wordDisplay3" class="hidden mt-4">
-        <h2 id="word3" class="text-2xl font-medium">Your word goes here</h2>
-      </div>
-
-      <!-- Score Display -->
-      <div id="scoreDisplay" class="mt-4 text-lg">
-        <span id="score" class="font-semibold">Words Seen: 0</span>
-      </div>
-
-      <!-- Reset Score Button -->
-      <button id="resetScore" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 w-full">
-        Reset
-      </button>
+        <!-- Buttons -->
+        <div class="grid grid-cols-3 divide-x divide-gray-200">
+            <!-- -1 -->
+            <button id="score-1" class="bg-red-100 text-red-600 font-semibold hover:bg-red-200 transition duration-300 flex items-center justify-center p-4 focus:outline-none">
+                <span class="text-2xl">-1</span>
+            </button>
+            <!-- +1 -->
+            <button id="score+1" class="bg-yellow-100 text-yellow-600 font-semibold hover:bg-yellow-200 transition duration-300 flex items-center justify-center p-4 focus:outline-none">
+                <span class="text-2xl">+1</span>
+            </button>
+            <!-- +3 -->
+            <button id="score+3" class="bg-green-100 text-green-600 font-semibold hover:bg-blue-200 transition duration-300 flex items-center justify-center p-4 focus:outline-none">
+                <span class="text-2xl">+3</span>
+            </button>
+        </div>
     </div>
-  </div>
+
 
   <!-- JavaScript Logic -->
   <script src="js/script.js"></script>
