moved some stuff around
Signed-off-by: kz3640 <kz3640@g.rit.edu>

--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
     <div class="border border-gray-200 rounded-lg shadow-lg w-96 bg-white">
         <!-- Top section -->
         <div class="grid grid-cols-3 border-b border-gray-200 p-4">
-            <div class="flex flex-col">
+            <div class="flex flex-col justify-between">
                 <!-- todo team names here -->
                 <span id="reset-score" class="text-gray-500 font-semibold">Reset Score</span>
-                <span id="score" class="text-lg font-bold text-gray-800">Score: 0</span>
+                <span id="score" class="self-start text-lg font-bold text-gray-800">Score: 0</span>
             </div>
-            <div class="flex flex-col items-center">
-                <span id="word1" class="text-lg font-bold text-gray-800">Word1</span>
-                <span id="word3" class="text-lg font-bold text-gray-800">Word2</span>
+            <div class="flex flex-col h-20 items-center justify-between">
+                <span id="word1" class="text-lg font-bold text-gray-800 text-center break-words">Word1</span>
+                <span id="word3" class="text-lg font-bold text-gray-800 text-center break-words">Word2</span>
             </div>
-            <div class="flex justify-end">
                 <span class="text-gray-500 font-semibold">Timer (todo)</span>
             </div>
         </div>
