--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <span id="word1" class="text-lg font-bold text-gray-800 text-center break-words">Word1</span>
                 <span id="word3" class="text-lg font-bold text-gray-800 text-center break-words">Word2</span>
             </div>
+            <div class="flex justify-end">
                 <span class="text-gray-500 font-semibold">Timer (todo)</span>
             </div>
         </div>
