add on hover to reset button
Signed-off-by: kz3640 <kz3640@g.rit.edu>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="grid grid-cols-3 border-b border-gray-200 p-4">
             <div class="flex flex-col justify-between">
                 <!-- todo team names here -->
-                <span id="reset-score" class="text-gray-500 font-semibold">Reset Score</span>
+                <span id="reset-score" class="text-gray-500 font-semibold hover:text-black transition duration-300 cursor-pointer">Reset Score</span>
                 <span id="score" class="self-start text-lg font-bold text-gray-800">Score: 0</span>
             </div>
             <div class="flex flex-col h-20 items-center justify-between">
