change hover color of 3rd button from blue to green
Signed-off-by: kz3640 <kz3640@g.rit.edu>

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <span class="text-2xl">+1</span>
             </button>
             <!-- +3 -->
-            <button id="score+3" class="bg-green-100 text-green-600 font-semibold hover:bg-blue-200 transition duration-300 flex items-center justify-center p-4 focus:outline-none">
+            <button id="score+3" class="bg-green-100 text-green-600 font-semibold hover:bg-green-200 transition duration-300 flex items-center justify-center p-4 focus:outline-none">
                 <span class="text-2xl">+3</span>
             </button>
         </div>
