timer works methinks
Signed-off-by: kz3640 <kz3640@g.rit.edu>

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
                 <!-- Custom Timer -->
                 <div class="flex items-center space-x-2">
-                    <input type="number" id="customTime" placeholder="Custom" class="border p-2 w-full focus:outline-none">
-                    <button onclick="startCustomTimer()" class="bg-green-100 text-green-600 font-semibold hover:bg-green-200 transition duration-300 p-2 focus:outline-none">Start</button>
+                    <input type="number" id="custom-time" placeholder="Time in Seconds" class="border p-2 w-full focus:outline-none">
+                    <button id="start-game-custom" class="bg-green-100 text-green-600 font-semibold hover:bg-green-200 transition duration-300 p-2 focus:outline-none">Start</button>
                 </div>
             </div>
         </div>
@@ -37,7 +37,7 @@
                 <span id="word3" class="text-lg font-bold text-gray-800 text-center break-words">Word2</span>
             </div>
             <div class="flex justify-end">
-                <span id="timerDisplay" class="text-lg font-bold text-gray-800">Timer: 0</span>
+                <span id="timer-display" class="text-lg font-bold text-gray-800">Timer: 0</span>
             </div>
         </div>
 
