added color coding words worth 1 vs 3 points
Signed-off-by: kz3640 <kz3640@g.rit.edu>

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <span id="score" class="self-start text-lg font-bold text-gray-800">Score: 0</span>
             </div>
             <div class="flex flex-col h-20 items-center justify-between">
-                <span id="word1" class="text-lg font-bold text-gray-800 text-center break-words">Word1</span>
-                <span id="word3" class="text-lg font-bold text-gray-800 text-center break-words">Word2</span>
+                <span id="word1" class="text-lg font-bold text-yellow-500 text-center break-words">Word1</span>
+                <span id="word3" class="text-lg font-bold text-green-500 text-center break-words">Word2</span>
             </div>
             <div class="flex justify-end">
                 <span class="text-gray-500 font-semibold">Timer (todo)</span>
